Made into a Node project

--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,1 @@
-
-node_modules/axios/CHANGELOG.md
-node_modules/axios/dist/axios.js
-node_modules/axios/dist/axios.map
-node_modules/ms/readme.md
-node_modules/ms/license.md
-node_modules/ms/index.js
-node_modules/is-buffer/LICENSE
-node_modules/is-buffer/index.js
-node_modules/follow-redirects/package.json
-node_modules/ms/package.json
-node_modules/is-buffer/README.md
-node_modules/is-buffer/package.json
-node_modules/follow-redirects/README.md
-node_modules/follow-redirects/LICENSE
-node_modules/follow-redirects/index.js
-node_modules/follow-redirects/https.js
-node_modules/follow-redirects/http.js
-node_modules/debug/src/node.js
-node_modules/debug/src/index.js
-node_modules/debug/src/debug.js
-node_modules/debug/src/browser.js
-node_modules/debug/README.md
-node_modules/debug/package.json
-node_modules/debug/node.js
-node_modules/debug/Makefile
-node_modules/debug/LICENSE
-node_modules/debug/karma.conf.js
-node_modules/debug/CHANGELOG.md
-node_modules/debug/.travis.yml
-node_modules/debug/.npmignore
-node_modules/debug/.eslintrc
-node_modules/debug/.coveralls.yml
-node_modules/axios/UPGRADE_GUIDE.md
-node_modules/axios/README.md
-node_modules/axios/package.json
-node_modules/axios/LICENSE
-node_modules/axios/lib/utils.js
-node_modules/axios/lib/helpers/spread.js
-node_modules/axios/lib/helpers/README.md
-node_modules/axios/lib/helpers/parseHeaders.js
-node_modules/axios/lib/helpers/normalizeHeaderName.js
-node_modules/axios/lib/helpers/isURLSameOrigin.js
-node_modules/axios/lib/helpers/isAbsoluteURL.js
-node_modules/axios/dist/axios.min.js
-node_modules/axios/dist/axios.min.map
-node_modules/axios/index.d.ts
-node_modules/axios/index.js
-node_modules/axios/lib/adapters/http.js
-node_modules/axios/lib/adapters/README.md
-node_modules/axios/lib/adapters/xhr.js
-node_modules/axios/lib/axios.js
-node_modules/axios/lib/cancel/Cancel.js
-node_modules/axios/lib/cancel/CancelToken.js
-node_modules/axios/lib/cancel/isCancel.js
-node_modules/axios/lib/core/Axios.js
-node_modules/axios/lib/core/createError.js
-node_modules/axios/lib/core/dispatchRequest.js
-node_modules/axios/lib/core/enhanceError.js
-node_modules/axios/lib/core/InterceptorManager.js
-node_modules/axios/lib/core/mergeConfig.js
-node_modules/axios/lib/core/README.md
-node_modules/axios/lib/core/settle.js
-node_modules/axios/lib/core/transformData.js
-node_modules/axios/lib/defaults.js
-node_modules/axios/lib/helpers/bind.js
-node_modules/axios/lib/helpers/buildURL.js
-node_modules/axios/lib/helpers/combineURLs.js
-node_modules/axios/lib/helpers/cookies.js
-node_modules/axios/lib/helpers/deprecatedMethod.js
-package.json
-package-lock.json
-Shenanibot main/test/package.json
-Shenanibot main/test/package-lock.json
-Shenanibot main/Twitch early access version/node_modules/
+node_modules/
