--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@bscotch/rumpus-ce": "^1.1.0",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "tmi.js": "^1.5.0"
   },
   "devDependencies": {},
