--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 STREAMER_DELEGATION_KEY="blahblahblahblah"
-TWITCH_CHANNEL="someLevelheadStreamer"
-STREAMER_USERNAME="someTwitchUsername"
+TWITCH_CHANNEL="RoninGameDev"
+STREAMER_USERNAME="RoninGameDev"
 PREFIX="!"
 BOT_USERNAME="LevelheadBot"
 OAUTH_TOKEN="123123123123131231231"
