--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shenanibot-public",
   "version": "1.0.0",
-  "description": "A Twitch bot that helps with managing a queue of levels for Levelhead streamers",
+  "description": "A Twitch bot that manages a queue of levels for Levelhead streamers",
   "main": "src/twitch/index.js",
   "dependencies": {
     "@bscotch/rumpus-ce": "^1.1.0",
@@ -22,7 +22,7 @@
     "twitch",
     "bot"
   ],
-  "author": "Jajdp",
+  "author": "FantasmicGalaxy",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jajdp/Shenanibot-public/issues"
