--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-STREAMER_DELEGATION_KEY="blahblahblahblah"
-TWITCH_CHANNEL="RoninGameDev"
-STREAMER_USERNAME="RoninGameDev"
+STREAMER_DELEGATION_KEY="exampledelegationkey"
+TWITCH_CHANNEL="yourTwitchChannel"
+STREAMER_USERNAME="yourTwitchUsername"
 PREFIX="!"
-BOT_USERNAME="LevelheadBot"
-OAUTH_TOKEN="123123123123131231231"
+BOT_USERNAME="yourBotUsername"
+OAUTH_TOKEN="oauth:exampleoauthtoken"
