--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "shenanibot-public",
   "version": "1.1.0",
   "description": "A Twitch bot that manages a queue of levels for Levelhead streamers",
-  "main": "src/twitch/index.js",
+  "main": "src/platforms/twitch/index.js",
   "dependencies": {
-    "@bscotch/rumpus-ce": "^1.1.0",
+    "@bscotch/rumpus-ce": "^1.2.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "tmi.js": "^1.5.0"
