--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-STREAMER_DELEGATION_KEY="exampledelegationkey"
-TWITCH_CHANNEL="yourTwitchChannel"
-STREAMER_USERNAME="yourTwitchUsername"
+BOT_USERNAME="LevelheadShenanibot"
+OAUTH_TOKEN="oauth:redacted"
+CHANNEL="fantasmicgalaxy"
+DELEGATION_TOKEN="redacted"
 PREFIX="!"
-BOT_USERNAME="yourBotUsername"
-OAUTH_TOKEN="oauth:exampleoauthtoken"
