--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "bot": "node .",
+    "test": "node src/test/test.js"
   },
   "repository": {
     "type": "git",
