Renamed the variables in the .env

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-STREAMER_DELEGATION_KEY="exampledelegationkey"
-TWITCH_CHANNEL="yourTwitchChannel"
-STREAMER_USERNAME="yourTwitchUsername"
-PREFIX="!"
 BOT_USERNAME="yourBotUsername"
 OAUTH_TOKEN="oauth:exampleoauthtoken"
+CHANNEL"yourTwitchChannel"
+DELEGATION_TOKEN="exampledelegationkey"
+PREFIX="!"
