--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-BOT_USERNAME="yourBotUsername"
-OAUTH_TOKEN="oauth:exampleoauthtoken"
-CHANNEL"yourTwitchChannel"
-DELEGATION_TOKEN="exampledelegationkey"
+BOT_USERNAME="botUsername"
+OAUTH_TOKEN="oauth:redacted"
+CHANNEL="yourTwitchChannel"
+STREAMER="yourTwitchUsername"
+DELEGATION_TOKEN="redacted"
 PREFIX="!"
+LEVEL_LIMIT=0
