--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 BOT_USERNAME="yourBotUsername"
 OAUTH_TOKEN="oauth:exampleoauthtoken"
-CHANNEL"yourTwitchChannel"
+CHANNEL="yourTwitchChannel"
 DELEGATION_TOKEN="exampledelegationkey"
 PREFIX="!"
