--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 BOT_USERNAME="yourBotUsername"
 OAUTH_TOKEN="oauth:exampleoauthtoken"
 CHANNEL="yourTwitchChannel"
+STREAMER="yourUsername"
 DELEGATION_TOKEN="exampledelegationkey"
 PREFIX="!"
 LEVEL_LIMIT=0
