add LEVEL_LIMIT_TYPE option
This allows the streamer to decide whether levels that have been played
or removed still count toward the limit.  (They originally did, but some
streamers want to only limit active levels.)

--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ OAUTH_TOKEN="oauth:exampleoauthtoken"
 CHANNEL="yourTwitchChannel"
 DELEGATION_TOKEN="exampledelegationkey"
 PREFIX="!"
+LEVEL_LIMIT_TYPE="active"
 LEVEL_LIMIT=0
