--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@madelsberger/pausebuffer": "^1.0.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "tmi.js": "^1.5.0"
+    "express": "^4.17.1",
+    "tmi.js": "^1.5.0",
+    "ws": "^7.3.1"
   },
   "devDependencies": {},
   "scripts": {
