--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shenanibot-public",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A Twitch bot that manages a queue of levels for Levelhead streamers",
   "main": "src/platforms/twitch/index.js",
   "dependencies": {
@@ -9,12 +9,15 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "inquirer": "^7.3.3",
+    "lodash": "^4.17.20",
     "tmi.js": "^1.5.0",
     "ws": "^7.3.1"
   },
   "devDependencies": {},
   "scripts": {
-    "bot": "node .",
+    "start": "node .",
+    "configure": "node src/config/index.js",
     "test": "node src/test/test.js",
     "basictest": "node src/test/basictest.js"
   },
